--- a/index.html
+++ b/index.html
@@ -1,1 +1,435 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>UNIVERSE</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <div class="main">
+
+
+        <nav class="navlink">
+            <div class="comb-logo">
+
+                <div class="logo">
+                    <a href=""> <img src="images/solar-sys2.png" alt="" class="logo"></a>
+                </div>
+                <h3>OUR SOLAR SYSTEM</h3>
+            </div>
+            <ul>
+
+                <li>
+                    <a href="">
+                        <img src="images/sun2.png" alt="" class="sun-img-nav nav-img" title="SUN">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#planet-1-content">
+                        <img src="images/mercury.png" alt="" class="  nav-img nav-planet_1 plt_1" title="MERCURY">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-2-content">
+                        <img src="images/venus.png" alt="" class="  nav-img nav-planet_2 " title="VENUS">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-3-content">
+                        <img src="images/earth-2.png" alt="" class="  nav-img nav-planet_3" title="EARTH">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-4-content">
+                        <img src="images/mars.png" alt="" class="  nav-img nav-planet_4" title="MARS">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-5-content">
+                        <img src="images/jupiter.png" alt="" class="  nav-img nav-planet_5" title="JUPITOR">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-6-content">
+                        <img src="https://solarsystem.nasa.gov/system/feature_items/images/28_saturn.png" alt=""
+                            class=" nav-img-sp nav-planet_6" title="SATURN">
+                    </a>
+                </li>
+                <li>
+                    <a href="#planet-7-content">
+                        <img src="images/uranus.png" alt="" class="  nav-img nav-planet_7" title="URANUS">
+                    </a>
+                </li>
+
+                <li>
+                    <a href="#planet-8-content">
+                        <img src="images/neptune.png" alt="" class="  nav-img nav-planet_8" title="NEPTUNE">
+                    </a>
+                </li>
+
+            </ul>
+
+        </nav>
+
+
+        <section>
+            <div class="left-section">
+
+                <div class="sun-box">
+                    <img src="images/sun2.png" alt="" class="sun-img">
+                </div>
+
+                <div class="planetss">
+
+                    <div class="pl-move-1">
+                        <img src="images/mercury.png" alt="" class="moving-planet-img planet_1 plt_1"></div>
+
+                    <div class="pl-move-2">
+                        <img src="images/venus.png" alt="" class="moving-planet-img planet_2"></div>
+
+                    <div class="pl-move-3">
+                        <img src="images/earth-2.png" alt="" class="moving-planet-img planet_3"></div>
+
+                    <div class="pl-move-4">
+                        <img src="images/mars.png" alt="" class="moving-planet-img planet_4"></div>
+
+                    <div class="pl-move-5">
+                        <img src="images/jupiter.png" alt="" class="moving-planet-img planet_5"></div>
+
+                    <div class="pl-move-6">
+                        <img src="https://solarsystem.nasa.gov/system/feature_items/images/28_saturn.png" alt=""
+                            class="moving-planet-img-sp planet_6"></div>
+
+                    <div class="pl-move-7">
+                        <img src="images/uranus.png" alt="" class="moving-planet-img planet_7"></div>
+
+                    <div class="pl-move-8">
+                        <img src="images/neptune.png" alt="" class="moving-planet-img planet_8"></div>
+                </div>
+
+            </div>
+
+        </section>
+
+
+    </div>
+
+    <div class="break-1">
+
+        <h1>OUR SOLAR SYSTEM</h2>
+
+        <div class="sub-break-1">
+
+            <div>
+                <h4>PLANETS</h4>
+                <h2>8</h2>
+
+            </div>
+
+            <div>
+                <h4>MOONS</h4>
+                <h2>200 <i class="fa fa-plus"></i></h2>
+
+            </div>
+
+            <div>
+                <h4>ASTEROIDS</h4>
+                <h2>1,113,527</h2>
+
+            </div>
+        </div>
+
+    </div>
+
+
+
+    <div class="content" id="planet-1-content">
+        <div class="planet-heading">
+            <h3>MERCURY</h3>
+        </div>
+
+        <div class="pl-details pl-1">
+
+            <div class="main-planet-img-box">
+                <img src="images/mercury.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+
+                <div class="pl-content">
+                    <h5>
+                        The smallest planet in our solar system and nearest to the Sun, Mercury is only slightly larger
+                        than Earth's Moon.
+                        <br><br>
+                        The Latest
+                        Full Moon Guide: January - February 2022
+                        From the surface of Mercury, the Sun would appear more than three times as large as it does when
+                        viewed from Earth, and the sunlight would be as much as seven times brighter. Despite its
+                        proximity to the Sun, Mercury is not the hottest planet in our solar system – that title belongs
+                        to nearby Venus, thanks to its dense atmosphere.
+
+                        <br><br>
+                        Because of Mercury's elliptical – egg-shaped – orbit, and sluggish rotation, the Sun appears to
+                        rise briefly, set, and rise again from some parts of the planet's surface. The same thing
+                        happens in reverse at sunset.
+
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <div class="content" id="planet-2-content">
+        <div class="planet-heading">
+            <h3>VENUS</h3>
+        </div>
+
+        <div class="pl-details pl-2">
+
+            <div class="main-planet-img-box">
+                <img src="images/venus.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+
+                <div class="pl-content">
+                    <h5>
+                        Venus is the second planet from the Sun and is Earth’s closest planetary neighbor. It’s one of
+                        the four inner, terrestrial (or rocky) planets, and it’s often called Earth’s twin because it’s
+                        similar in size and density. These are not identical twins, however – there are radical
+                        differences between the two worlds.
+                        <br><br>
+                        Venus has crushing air pressure at its surface – more than 90 times that of Earth – similar to
+                        the pressure you'd encounter a mile below the ocean on Earth.
+
+                        <br><br>
+                        Venus has a thick, toxic atmosphere filled with carbon dioxide and it’s perpetually shrouded in
+                        thick, yellowish clouds of sulfuric acid that trap heat, causing a runaway greenhouse effect.
+                        It’s the hottest planet in our solar system, even though Mercury is closer to the Sun. Surface
+                        temperatures on Venus are about 900 degrees Fahrenheit (475 degrees Celsius) – hot enough to
+                        melt lead. The surface is a rusty color and it’s peppered with intensely crunched mountains and
+                        thousands of large volcanoes. Scientists think it’s possible some volcanoes are still active.
+
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="content" id="planet-3-content">
+        <div class="planet-heading">
+            <h3>Earth</h3>
+        </div>
+
+        <div class="pl-details pl-3">
+
+            <div class="main-planet-img-box">
+                <img src="images/earth-2.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+
+                <div class="pl-content">
+                    <h5>
+                        Our home planet is the third planet from the Sun, and the only place we know of so far that’s
+                        inhabited by living things.
+
+                        <br><br>
+                        While Earth is only the fifth largest planet in the solar system, it is the only world in our
+                        solar system with liquid water on the surface. Just slightly larger than nearby Venus, Earth is
+                        the biggest of the four planets closest to the Sun, all of which are made of rock and metal.
+
+                        <br><br>
+                        The name Earth is at least 1,000 years old. All of the planets, except for Earth, were named
+                        after Greek and Roman gods and goddesses. However, the name Earth is a Germanic word, which
+                        simply means “the ground.”
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="content" id="planet-4-content">
+        <div class="planet-heading">
+            <h3>MARS</h3>
+        </div>
+
+        <div class="pl-details pl-4">
+
+            <div class="main-planet-img-box">
+                <img src="images/mars.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+
+
+                <div class="pl-content">
+                    <h5>
+                        Mars is the fourth planet from the Sun – a dusty, cold, desert world with a very thin
+                        atmosphere. Mars is also a dynamic planet with seasons, polar ice caps, canyons, extinct
+                        volcanoes, and evidence that it was even more active in the past.
+                        <br><br>
+                        Mars is one of the most explored bodies in our solar system, and it's the only planet where
+                        we've sent rovers to roam the alien landscape.
+
+                        <br><br>
+                        These robotic explorers have found lots of evidence that Mars was much wetter and warmer, with a
+                        thicker atmosphere, billions of years ago.
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="content" id="planet-5-content">
+        <div class="planet-heading">
+            <h3>JUPITOR</h3>
+        </div>
+
+        <div class="pl-details pl-5">
+
+            <div class="main-planet-img-box">
+                <img src="images/jupiter.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+                <div class="pl-content">
+                    <h5>
+                        Jupiter has a long history of surprising scientists – all the way back to 1610 when Galileo
+                        Galilei found the first moons beyond Earth. That discovery changed the way we see the universe.
+                        <br><br>
+                        Fifth in line from the Sun, Jupiter is, by far, the largest planet in the solar system – more
+                        than twice as massive as all the other planets combined.
+                        <br><br>
+                        Jupiter's familiar stripes and swirls are actually cold, windy clouds of ammonia and water,
+                        floating in an atmosphere of hydrogen and helium. Jupiter’s iconic Great Red Spot is a giant
+                        storm bigger than Earth that has raged for hundreds of years.
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+    <div class="content" id="planet-6-content">
+        <div class="planet-heading">
+            <h3>SATURN</h3>
+        </div>
+
+        <div class="pl-details pl-6">
+
+            <div class="main-planet-img-box">
+                <img src="https://solarsystem.nasa.gov/system/feature_items/images/28_saturn.png" alt=""
+                    class="main-planet-img-sp">
+            </div>
+
+            <div class="pl-details-box">
+                <div class="pl-content">
+                    <h5>
+                        Saturn is the sixth planet from the Sun and the second-largest planet in our solar system.
+                        <br><br>
+                        Adorned with thousands of beautiful ringlets, Saturn is unique among the planets. It is not the
+                        only planet to have rings – made of chunks of ice and rock – but none are as spectacular or as
+                        complicated as Saturn's.
+                        <br><br>
+                        Like fellow gas giant Jupiter, Saturn is a massive ball made mostly of hydrogen and helium.
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+    <div class="content" id="planet-7-content">
+        <div class="planet-heading">
+            <h3>URANUS</h3>
+        </div>
+
+        <div class="pl-details pl-7">
+
+            <div class="main-planet-img-box">
+                <img src="images/uranus.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+                <div class="pl-content">
+                    <h5>
+                        Uranus is the seventh planet from the Sun, and has the third-largest diameter in our solar
+                        system. It was the first planet found with the aid of a telescope, Uranus was discovered in 1781
+                        by astronomer William Herschel, although he originally thought it was either a comet or a star.
+                        <br><br>
+                        Uranus is about four times wider than Earth. If Earth were a large apple, Uranus would be the
+                        size of a basketball.
+                        Uranus takes about 17 hours to rotate once (a Uranian day), and about 84 Earth years to complete
+                        an orbit of the Sun (a Uranian year).
+                        <br><br>
+                        Uranus is an ice giant. Most of its mass is a hot, dense fluid of "icy" materials – water,
+                        methane and ammonia – above a small rocky core.Uranus has an atmosphere made mostly of molecular
+                        hydrogen and atomic helium, with a small amount of methane.
+                    </h5>
+                </div>
+            </div>
+        </div>
+
+
+    </div>
+
+    <div class="content" id="planet-8-content">
+        <div class="planet-heading">
+            <h3>NEPTUNE</h3>
+        </div>
+
+        <div class="pl-details pl-8">
+
+            <div class="main-planet-img-box">
+
+                <img src="images/neptune.png" alt="" class="main-planet-img">
+            </div>
+
+            <div class="pl-details-box">
+                <div class="pl-content">
+                    <h5>
+                        Dark, cold, and whipped by supersonic winds, ice giant Neptune is the eighth and most distant
+                        planet in our solar system.
+                        <br><br>
+                        Neptune takes about 16 hours to rotate once (a Neptunian day), and about 165 Earth years to
+                        orbit the sun (a Neptunian year).Neptune orbits our Sun, a star, and is the eighth planet from
+                        the Sun at a distance of about 2.8 billion miles (4.5 billion kilometers).
+                        Neptune is an ice giant. Most of its mass is a hot, dense fluid of "icy" materials – water,
+                        methane and ammonia – above a small rocky core.
+                        <br><br>
+                        Neptune's atmosphere is made up mostly of molecular hydrogen, atomic helium and methane.
+                        Neptune has at least five main rings and four more ring arcs, which are clumps of dust and
+                        debris likely formed by the gravity of a nearby moon.
+                        Neptune has 14 known moons which are named after sea gods and nymphs in Greek mythology.
+
+                    </h5>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <footer>
+        <h6>Created by: Amrit Singh Rathore</h6>
+    </footer>
+</body>
+
+</html>
